--- a/site/index.html
+++ b/site/index.html
@@ -585,6 +585,11 @@
 
 
 
+<div class="admonition warning">
+<p class="admonition-title">Warning</p>
+<p>The server computer occasionally loses connection due to firmware-related issues.
+We're actively working on solving this problem as soon as possible.</p>
+</div>
 <h1 id="server-fundamentals">Server Fundamentals</h1>
 <h2 id="basic-information">Basic Information</h2>
 <ul>
