updated command list

--- a/site/index.html
+++ b/site/index.html
@@ -649,19 +649,15 @@
 </thead>
 <tbody>
 <tr>
-<td><code>/vchannel join &lt;channel&gt;</code></td>
+<td><code>/vchannel &lt;channel&gt;</code></td>
 <td>Join a chat channel</td>
 </tr>
 <tr>
-<td><code>/vchannel leave &lt;channel&gt;</code></td>
-<td>Leave a chat channel</td>
-</tr>
-<tr>
-<td><code>/vch list</code></td>
+<td><code>/vchlist</code></td>
 <td>List available channels</td>
 </tr>
 <tr>
-<td><code>/vch who &lt;channel&gt;</code></td>
+<td><code>/vchwho &lt;channel&gt;</code></td>
 <td>See who's in a channel</td>
 </tr>
 </tbody>
